--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fe-vite-nestjs-hoidanit",
-  "author": "Hỏi Dân IT với Eric",
-  "description": "Frontend for series Nest.JS Youtube Hỏi Dân IT",
+  "author": "Long Tran",
+  "description": "Frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
