--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fe-vite-nestjs-hoidanit",
+  "name": "fe_DATN",
   "author": "Long Tran",
   "description": "Frontend",
   "private": true,
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.8.0",
-    "@ant-design/pro-components": "2.6.46",
+    "@ant-design/pro-components": "^2.6.46",
     "@ant-design/pro-layout": "7.17.19",
     "@reduxjs/toolkit": "1.9.3",
     "antd": "5.13.1",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@types/lodash": "4.14.195",
     "@types/node": "20.2.3",
-    "@types/react": "18.0.28",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "9.0.2",
